# ChessDNN

./: README  README.md  batch_loader.py  best_move.py  best_move1.py  book_move.py  build.sh  build_model.py  cached_board.py  config.py  cutechess.sh  defunc_build_model.py  defunc_dnn_eval.py  defunc_dnn_eval_numpy.py  defunc_halfkp.py  defunc_test_halfkp.py  dnn_engine.sh  dnn_eval.py  dnn_eval_numpy.py  engine.py  engine_strength.py  engine_test.py  environment.yml  find_best_move.py  halfkp.py  material.py  mp_search.py  nn_eval.py  nn_evaluator.py  nn_inference.py  nn_ops_fallback.py  nn_ops_fast.c  nn_ops_fast.pyx  nn_quantize.py  nn_tests.py  nn_train.py  nnue_batch_loader.py  parameter_tuning_guide.md  position_eval.py  predict_score.py  (+11 more)
chess_cpp_integration/: README.md  build.sh  setup.py  test_chess_cpp.py
cpp_board/: CMakeLists.txt  README.md  bindings.cpp  build.sh  chess_wrapper.cpp  chess_wrapper.hpp  polyglot_zobrist.hpp  test_cpp_board.py
cpp_nn_build/: README.md  build.sh  dnn_batch_loader.cpp  nnue_batch_loader.h
model/: dnn_notes.txt  model.keras  testing.txt
nn_build_cpp/: CMakeLists.txt  README.md  batch_loader.cpp  build.sh
nn_train/: README.md  build.sh  dnn_batch_loader.py  nn_train.py  prepare_data.py  shard_io.py
nn_train/cpp_nn_train/: CMakeLists.txt  README.md  build.sh  dnn_batch_loader.h  nnue_batch_loader.cpp
test/: README.md  compare_dnn.py  cutechess.sh  data_test.py  defunc_compare_dnn.py  engine_test.py  nn_tests.py  notes.txt  oldfish.sh  print_config.py  stockfish.sh  stockfish_batch.py  stockfish_eval.sh  testing.txt  verify_data.py  wait.sh
utils/: README.md  quantize_analysis.py  sf_static_eval.py  sf_static_eval.sh  wait.sh
